# zectl-grub

./: .gitignore  CMakeLists.txt  LICENSE
docs/: BUILDING.md
include/: libze_plugin_grub.h
src/: libze_plugin_grub.c
